--- a/Segunda entrega/AbstractFactoryAdminTheme/src/app/features/payments/payments.component.html
+++ b/Segunda entrega/AbstractFactoryAdminTheme/src/app/features/payments/payments.component.html
@@ -1,26 +1,62 @@
-<h2>Métodos de Pago</h2>
-<ul>
-    <li *ngFor="let method of methods">
-        {{ method.name }}
-    </li>
-</ul>
+<div [ngClass]="currentTheme" class="payments-wrapper  theme-container"
+    [ngStyle]="{'background-color': currentTheme.backgroundColor, 'color': currentTheme.textColor}">
 
-<h2>Pagos Realizados</h2>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Método</th>
-            <th>Monto</th>
-            <th>Fecha</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let payment of payments">
-            <td>{{ payment.id }}</td>
-            <td>{{ payment.method }}</td>
-            <td>{{ payment.amount }}</td>
-            <td>{{ payment.date }}</td>
-        </tr>
-    </tbody>
-</table>
+
+    <div class="actions" style="display: flex; justify-content: space-between; align-items: center;">
+        <div style="flex: 1;">
+            <h2 class="section-title">Pagos Realizados</h2>
+        </div>
+        <button mat-raised-button color="primary" (click)="openCreateDialog()">
+            <mat-icon>add</mat-icon> Nuevo Pago
+        </button>
+    </div>
+    <div class="table-container">
+        <table mat-table [dataSource]="payments" class="styled-table">
+
+            <!-- ID -->
+            <ng-container matColumnDef="id">
+                <th mat-header-cell *matHeaderCellDef>ID</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.id }}</td>
+            </ng-container>
+
+            <!-- Método -->
+            <ng-container matColumnDef="method">
+                <th mat-header-cell *matHeaderCellDef>Método</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.method }}</td>
+            </ng-container>
+
+            <!-- Monto -->
+            <ng-container matColumnDef="amount">
+                <th mat-header-cell *matHeaderCellDef>Monto</th>
+                <td mat-cell *matCellDef="let payment">${{ payment.amount }}</td>
+            </ng-container>
+
+            <!-- Fecha -->
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef>Fecha</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.date }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="addressee">
+                <th mat-header-cell *matHeaderCellDef>Destinatario</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.addressee }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="notificationType">
+                <th mat-header-cell *matHeaderCellDef>Tipo de notificación</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.notificationType }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="responseNotification">
+                <th mat-header-cell *matHeaderCellDef>Cuerpo de la notificación</th>
+                <td mat-cell *matCellDef="let payment">{{ payment.responseNotification }}</td>
+            </ng-container>
+            <tr mat-header-row
+                *matHeaderRowDef="['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification']">
+            </tr>
+            <tr mat-row
+                *matRowDef="let row; columns: ['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification']">
+            </tr>
+        </table>
+    </div>
+</div>
