--- a/Segunda entrega/AbstractFactoryAdminTheme/src/app/features/payments/payments.component.html
+++ b/Segunda entrega/AbstractFactoryAdminTheme/src/app/features/payments/payments.component.html
@@ -51,11 +51,19 @@
                 <th mat-header-cell *matHeaderCellDef>Cuerpo de la notificación</th>
                 <td mat-cell *matCellDef="let payment">{{ payment.responseNotification }}</td>
             </ng-container>
+            <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                <td mat-cell *matCellDef="let payment">
+                    <button mat-raised-button color="primary" (click)="openReportModal(payment.id)">
+                        Generar Reporte
+                    </button>
+                </td>
+            </ng-container>
             <tr mat-header-row
-                *matHeaderRowDef="['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification']">
+                *matHeaderRowDef="['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification', 'acciones']">
             </tr>
             <tr mat-row
-                *matRowDef="let row; columns: ['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification']">
+                *matRowDef="let row; columns: ['id', 'method', 'amount', 'date', 'addressee', 'notificationType', 'responseNotification', 'acciones']">
             </tr>
         </table>
     </div>
